@@ -14,7 +14,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
 @Slf4j
 @Service
@@ -43,7 +42,11 @@ class UserServiceImpl implements UserService {
         user.setLastName(loginDto.getLastName());
         user.setPassword(this.passwordEncoder.encode(loginDto.getPassword()));
         user.setEmail(loginDto.getEmail());
-        user.setRoles(Collections.singletonList(Role.USER));
+        if (this.userRepository.countUsers() == 0) {
+            user.setRoles(List.of(Role.USER, Role.ADMIN));
+        } else {
+            user.setRoles(Collections.singletonList(Role.USER));
+        }
 
         return this.userRepository.save(user);
     }
@@ -62,18 +65,6 @@ class UserServiceImpl implements UserService {
                 .orElseThrow(() -> VierGewinntException.of(
                         ErrorCode.USER_NOT_FOUND,
                         "User with email " + email + " not found"));
-    }
-
-    @Override
-    public Optional<User> findUserById(final int id) {
-        return this.userRepository.findById(id);
-    }
-
-    @Override
-    public void setSessionId(final String email, final String sessionId) throws VierGewinntException {
-        final var user = this.getUserByEmail(email);
-        user.addSession(sessionId);
-        this.userRepository.save(user);
     }
 
     @Override
